# erlang-quickjs

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  Makefile  README.md  rebar.config  run_bench.sh
.github/workflows/: ci.yml
bench/: quickjs_bench.erl
c_src/: CMakeLists.txt  quickjs_nif.c
guides/: cbor-encoding.md  erlang-functions.md  event-framework.md  getting-started.md  metrics.md
src/: quickjs.app.src  quickjs.erl
test/: quickjs_tests.erl
